add /wild end to teleport to random pos in the end